proc-macros/tests/ui/incorrect/sub/sub_unsupported_field.stderr
error: Unknown argument `magic`, expected one of: `aliases`, `item`, `name`, `param_kind`, `unsubscribe_aliases`
 --> $DIR/sub_unsupported_field.rs:6:42
  |
6 |     #[subscription(name = "sub", item = u8, magic = true)]
  |                                             ^^^^^
